fix: dark mode tweaks

--- a/src/style/base.styl
+++ b/src/style/base.styl
@@ -85,6 +85,7 @@ ul
     padding 12px
     display flex
     align-items center
+    border-radius $br
     > .vue-ui-icon
       &:first-child
         margin-right 10px
