--- a/src/style/mixins.styl
+++ b/src/style/mixins.styl
@@ -131,4 +131,4 @@ vue-ui-text-colors($c)
   &.banner
     background lighten($c, 90%)
     .vue-ui-dark-mode &
-      background darken($c, 30%)
+      background darken($c, 60%)
